--- a/style.css
+++ b/style.css
@@ -27,120 +27,214 @@ header div span {
   background-color: rgb(200, 0, 0);
   color: white;
   border: none;
-  height: 40px;
-  width: 110px;
+  padding: 12px 18px;
   margin: 15px;
   border-radius: 3px;
   cursor: pointer;
+  transition: opacity 0.25s;
+}
+
+.sub-button:hover {
+  opacity: 0.7;
+}
+
+.sub-button:active {
+  opacity: 0.5;
 }
 
 .join-button {
   background-color: white;
   color: rgb(0, 100, 255);
   border: solid 1.5px;
-  height: 40px;
-  width: 70px;
+  padding: 10px 18px;
   margin: 15px;
   border-radius: 3px;
   cursor: pointer;
+  transition: background-color 0.5s, color 0.5s;
 }
 
+.join-button:hover {
+  background-color: rgb(0, 100, 255);
+  color: white;
+}
+.join-button:active {
+  opacity: 0.7;
+}
 .tweet-button {
   background-color: rgb(83, 155, 248);
   color: white;
   border: none;
-  height: 40px;
-  width: 85px;
+  padding: 12px 20px;
   margin: 15px;
   border-radius: 20px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: box-shadow 0.2s;
+}
+
+.tweet-button:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .uber-button {
   background-color: black;
   color: white;
   border: none;
-  height: 40px;
-  width: 120px;
+  padding: 10px 20px;
   margin: 15px;
   cursor: pointer;
+  transition: opacity 0.2s;
+}
+.uber-button:hover {
+  opacity: 0.7;
 }
 
 .amazon-button {
   background-color: rgb(255, 216, 20);
   color: black;
   border: none;
-  height: 40px;
-  width: 200px;
+  padding: 10px 60px;
   margin: 15px;
   border-radius: 20px;
   cursor: pointer;
   font-size: 14px;
+  transition: background-color 0.3s;
+}
+
+.amazon-button:hover {
+  background-color: rgb(255, 196, 0);
 }
 
 .signup-button {
   background-color: rgb(46, 164, 79);
   color: white;
   border: none;
-  height: 40px;
-  width: 100px;
+  padding: 10px 20px;
   margin: 15px;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: box-shadow 0.2;
+}
+
+.signup-button:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .getstarted-button {
   background-color: rgb(121, 82, 179);
   color: white;
   border: none;
-  height: 40px;
-  width: 115px;
+  padding: 10px 22px;
   margin: 15px;
   border-radius: 3px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: background-color 0.4s;
+}
+
+.getstarted-button:hover {
+  background-color: rgb(93, 62, 139);
 }
 
 .download-button {
   background-color: white;
   color: rgb(108, 117, 125);
   border: solid 1.5px;
-  height: 40px;
-  width: 100px;
+  padding: 10px 18px;
   margin: 15px;
   border-radius: 3px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.download-button:hover {
+  background-color: rgb(108, 117, 125);
+  color: white;
 }
 
 .apply-button {
   background-color: rgb(10, 102, 194);
   color: white;
   border: none;
-  height: 40px;
-  width: 225px;
+  padding: 10px 22px;
   margin: 15px;
   border-radius: 20px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: background-color 0.2s;
+}
+
+.apply-button:hover {
+  background-color: rgb(11, 80, 150);
 }
 
 .save-button {
   background-color: white;
   color: rgb(10, 102, 194);
   border: solid 1.5px;
-  height: 40px;
-  width: 85px;
+  padding: 10px 20px;
   margin: 15px;
   border-radius: 20px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
+  transition: background-color 0.3s, border-width 0.3s;
+}
+
+.save-button:hover {
+  background-color: rgb(221, 238, 255);
+  border-width: 2.5px;
+}
+
+.stretch-button {
+  background-color: green;
+  color: white;
+  border: none;
+  font-size: 18px;
+  padding: 8px 15px;
+  cursor: pointer;
+  margin: 15px;
+  transition: padding 1s;
+}
+
+.stretch-button:hover {
+  padding: 18px 36px;
+}
+.shadow-button {
+  background-color: green;
+  color: white;
+  border: none;
+  font-size: 18px;
+  padding: 8px 15px;
+  cursor: pointer;
+  margin: 15px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.shadow-button:active {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  box-shadow: none;
+}
+.s-button {
+  background-color: green;
+  color: white;
+  border: none;
+  font-size: 18px;
+  padding: 8px 15px;
+  margin: 15px;
+  cursor: pointer;
+  transition: padding 0.15s, margin 0.15s;
+}
+
+.s-button:hover {
+  padding: 8px 25px;
+  margin: 0 15px;
 }
