--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header div span {
   margin-left: auto;
   margin-right: auto;
   flex-wrap: wrap;
+  margin-bottom: 15px;
 }
 
 .sub-button {
@@ -64,7 +65,7 @@ header div span {
   background-color: rgb(83, 155, 248);
   color: white;
   border: none;
-  padding: 12px 20px;
+  padding: 12px 25px;
   margin: 15px;
   border-radius: 20px;
   cursor: pointer;
