--- a/style2.css
+++ b/style2.css
@@ -25,7 +25,7 @@
   line-height: 20px;
 }
 
-.images{
+.images {
   background-color: lavender;
   width: 960px;
   margin-left: auto;
@@ -34,26 +34,26 @@
   padding: 15px;
   text-align: center;
 }
-.cat1{
-width: 200px;
-border-radius: 15px;
-margin-right: 30px;
+.cat1 {
+  width: 200px;
+  border-radius: 15px;
+  margin-right: 30px;
 }
 
-.cat2{
+.cat2 {
   width: 150px;
   height: 150px;
   object-fit: cover;
   margin-right: 30px;
 }
 
-.cat3{
+.cat3 {
   width: 150px;
   height: 150px;
   object-fit: cover;
   border-radius: 75px;
 }
-.textboxes{
+.textboxes {
   background-color: ivory;
   width: 960px;
   margin-left: auto;
@@ -64,14 +64,18 @@ margin-right: 30px;
   font-family: Arial;
 }
 
-.s1{
-  padding: 10px;  
+.s1 {
+  padding: 10px;
   border: solid 1px;
   border-color: rgb(199, 199, 199);
   border-radius: 8px;
+  display: block;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.s2{
+.s2 {
   padding: 10px;
   padding-left: 15px;
   border: none;
@@ -79,9 +83,17 @@ margin-right: 30px;
   border-color: rgb(199, 199, 199);
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(189, 189, 189, 0.5);
+  display: block;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.s3{
+.google-img {
+  width: 200px;
+}
+
+.s3 {
   padding: 10px;
   padding-left: 15px;
   border: solid 2px;
@@ -89,20 +101,19 @@ margin-right: 30px;
   width: 350px;
   border-color: rgb(199, 199, 199);
   border-radius: 5px;
- 
 }
-.label{
+.label {
   margin-top: 50px;
   margin-right: 325px;
   margin-bottom: 10px;
   color: rgb(100, 100, 100);
 }
 
-.disclaimer{ 
+.disclaimer {
   margin-bottom: 15px;
   color: rgb(100, 100, 100);
 }
-.agreejoin-button{
+.agreejoin-button {
   background-color: rgb(4, 100, 224);
   color: white;
   padding: 15px 100px;
@@ -110,25 +121,102 @@ margin-right: 30px;
   border-radius: 30px;
   font-size: 18px;
 }
-.tweetdiv{
+.tweetdiv {
   margin: 50px 0px;
   background-color: white;
   width: 960px;
   padding: 10px 0;
 }
 
-.cat4{
+.cat4 {
   width: 64px;
   height: 64px;
   object-fit: cover;
   border-radius: 75px;
   vertical-align: middle;
 }
-.s4{
+.s4 {
   border: none;
   width: 300px;
   padding: 15px 15px;
   font-size: 18px;
   vertical-align: middle;
-  
+}
+
+.thanks {
+  width: 220px;
+  text-align: left;
+  display: inline-block;
+  vertical-align: middle;
+}
+.yes-no {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 3px;
+}
+.signup-form {
+  width: 400px;
+  background-color: white;
+  padding: 40px;
+  display: inline-block;
+}
+.s5 {
+  display: inline-block;
+  padding: 10px;
+  border: solid 1px;
+  border-color: rgb(199, 199, 199);
+  border-radius: 8px;
+  width: 150px;
+}
+.s6 {
+  padding: 10px;
+  border: solid 1px;
+  border-color: rgb(199, 199, 199);
+  border-radius: 8px;
+  width: 326px;
+  margin-top: 10px;
+}
+.signup-button2 {
+  background-color: rgb(4, 100, 224);
+  color: white;
+  padding: 15px 140px;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 15px;
+}
+.request-a-ride-form {
+  width: 360px;
+  background-color: white;
+  padding: 40px;
+  display: inline-block;
+}
+.request-text {
+  font-size: 30px;
+  text-align: left;
+}
+.s7 {
+  padding: 15px;
+  background-color: rgba(214, 214, 214, 0.267);
+  border: none;
+  width: 326px;
+  margin-top: 10px;
+}
+.request-button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 15px 20px;
+  margin-top: 30px;
+  margin-right: 10px;
+  display: inline-block;
+}
+.schedule-button {
+  background-color: rgb(240, 240, 240);
+  color: black;
+  border: none;
+  padding: 15px 20px;
+  margin-top: 30px;
+  display: inline-block;
 }
