--- a/yt.css
+++ b/yt.css
@@ -1,7 +1,24 @@
 .thumbnail{
     width: 300px;    
+    display: block;
 }
 .search-bar{
    font-size: 20px;
    margin-left: 12px; 
 }
+.video-title {
+    font-weight: bold;
+    font-size: 18px;
+    width: 300px;
+    line-height: 24px;
+    margin-bottom: 5px;
+  }
+  .video-stats,
+  .video-author{
+    font-size: 14px;
+    color: rgb(95, 95, 95);
+    margin-bottom: 20px;
+    margin-top: 0;
+    width: 280px;
+    line-height: 20px;
+  }
