--- a/yt.css
+++ b/yt.css
@@ -1,3 +1,10 @@
+body{
+  font-family: Roboto, Arial;
+}
+p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .thumbnail{
     width: 300px;    
     display: block;
@@ -8,24 +15,44 @@
    display: block; 
 }
 .video-title {
-    font-weight: bold;
-    font-size: 18px;
-    width: 300px;
+    font-weight: 500;
+    font-size: 14px;    
     line-height: 24px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    margin-top: 0;
+    line-height: 20px;
   }
   .video-stats,
   .video-author{
-    font-size: 14px;
-    color: rgb(95, 95, 95);
-    margin-bottom: 20px;
-    margin-top: 0;
+    font-size: 12px;
+    color: rgb(95, 95, 95);    
     width: 280px;
-    line-height: 20px;
+    line-height: 20px;   
   }
+  
   .video-preview{
     width: 300px;
     display: inline-block;
     vertical-align: top;
     margin-right: 15px;
+  }
+
+  .thumbnail-row{
+    margin-bottom: 12px;
+  }
+
+  .channel-photo{    
+    display: inline-block;
+    width: 50px;
+    vertical-align: top;
+  }
+
+  .video-info{
+    display: inline-block;
+    width: 200px;
+  }
+
+  .profile-photo{
+    border-radius: 25px;
+    width: 40px;
   }
