--- a/style3.css
+++ b/style3.css
@@ -102,3 +102,25 @@
 .yt-film{
     margin-bottom: 10px;
 }
+
+.grids{
+    margin-top: 30px;
+}
+.grid1{
+    display: grid;
+    grid-template-columns: 200px 75px;
+    margin-bottom: 30px;
+}
+.grid2{
+    display: grid;
+    grid-template-columns: 50px 1fr 75px;
+    margin-bottom: 30px;
+}
+
+.grid3{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 10px;
+    margin-bottom: 30px;
+}
