--- a/style3.css
+++ b/style3.css
@@ -10,40 +10,40 @@
   margin-left: 25px;
   font-family: Arial;
 }
-.follow-cat p{
-    line-height: 10px;
+.follow-cat p {
+  line-height: 10px;
 }
 
-.profile-picture{
-    display: inline-block;
-    vertical-align: middle;
+.profile-picture {
+  display: inline-block;
+  vertical-align: middle;
 }
-.profile-info{
-    display: inline-block;
-    width: 200px;
-    padding-left: 10px;
-    vertical-align: middle;
-}
-
-.name{
-    font-size: 18px;
-    font-weight: bold;
+.profile-info {
+  display: inline-block;
+  width: 200px;
+  padding-left: 10px;
+  vertical-align: middle;
 }
 
-.animal{
-    color: gray;
-    font-size: 18px;
+.name {
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.description{
-    color: gray;
-}
-.profile-follow{
-    display: inline-block;
-    vertical-align: middle;
+.animal {
+  color: gray;
+  font-size: 18px;
 }
 
-.follow-button{
+.description {
+  color: gray;
+}
+.profile-follow {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.follow-button {
   background-color: rgb(0, 132, 255);
   color: white;
   border: none;
@@ -53,74 +53,149 @@
   cursor: pointer;
   font-size: 16px;
 }
-.follow-cats{
-    display: inline-block;
-    margin-right: 20px;
+.follow-cats {
+  display: inline-block;
+  margin-right: 20px;
 }
 
+.yt-list {
+  display: inline-block;
+  width: 450px;
+  font-family: Arial;
+}
+.thumbnail {
+  display: inline-block;
+  vertical-align: middle;
+}
+.thumbnail-photo {
+  width: 200px;
+  display: block;
+}
 
-.yt-list{
-    display: inline-block;
-    width: 450px;
+.video-info2 {
+  display: inline-block;
+  width: 230px;
+  margin-left: 10px;
+  vertical-align: middle;
+}
+
+.video-title2 {
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.video-author2 {
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 4px;
+}
+
+.video-stats2 {
+  color: gray;
+  font-size: 14px;
+  margin-top: 6px;
+}
+
+.yt-film {
+  margin-bottom: 10px;
+}
+
+.grids {
+  margin-top: 30px;
+}
+.grid1 {
+  display: grid;
+  grid-template-columns: 200px 75px;
+  margin-bottom: 30px;
+}
+.grid2 {
+  display: grid;
+  grid-template-columns: 50px 1fr 75px;
+  margin-bottom: 30px;
+}
+
+.grid3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 10px;
+  margin-bottom: 30px;
+}
+
+.flexbox {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+.flex-header {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  height: 70px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: gray;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.notifications {
+  border: solid 1px;
+  border-color: rgb(192, 192, 192);
+  border-radius: 5px;
+  padding: 8px 15px;
+  margin-top: 30px;
+  font-family: Arial;
+  width: 350px;
+  
+}
+
+.notification-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+  vertical-align: middle;  
+}
+
+.number-of-notifications {
+    background-color: rgb(9, 106, 252);
+    color: white;
+    border: none;
+    border-radius: 15px;
+    padding: 4px 12px
+}
+
+.banner{
+    background-color: blueviolet;
+    height: 50px;
+    margin-top: 25px;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;  
+    align-items: center;
+    padding:6px 16px;
     font-family: Arial;
 }
-.thumbnail{
-    display: inline-block;
-    vertical-align: middle;
-}
-.thumbnail-photo{
-    width: 200px;    
-    display: block;
-}
 
-.video-info2{
-    display: inline-block;
-    width: 230px;
-    margin-left: 10px;
-    vertical-align: middle;
-    
-}
-
-.video-title2{
+.left{
+    color: white;
     font-weight: bold;
-    font-size: 16px;
-    margin-top: 0;
+}
+.search-bar{
+    width: 500px;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
 }
 
-.video-author2{
-    color: gray;
-    font-size: 14px;
-    margin-bottom: 4px;
-}
-
-.video-stats2{
-    color: gray;
-    font-size: 14px;
-    margin-top: 6px;
-}
-
-.yt-film{
-    margin-bottom: 10px;
-}
-
-.grids{
-    margin-top: 30px;
-}
-.grid1{
-    display: grid;
-    grid-template-columns: 200px 75px;
-    margin-bottom: 30px;
-}
-.grid2{
-    display: grid;
-    grid-template-columns: 50px 1fr 75px;
-    margin-bottom: 30px;
-}
-
-.grid3{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 10px;
-    margin-bottom: 30px;
+.right button{
+    background-color: transparent;
+    color: white;
+    border: solid 1px;
+    border-radius: 2px;
+    padding: 10px 15px;
+    cursor: pointer;
 }
