--- a/header.css
+++ b/header.css
@@ -1,29 +1,88 @@
 .header {
-    height: 55px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  height: 55px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .search-bar {
- 
-  
+  flex: 1;
+  height: 36px;
+  width: 0;
+  padding-left: 10px;
+  font-size: 16px;
+  border: solid 1px;
+  border-color: rgb(179, 179, 179);
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
 }
 
-.left-section{
-    background-color: aquamarine;
-    width: 200px;
+.search-bar::placeholder {
+  font-family: Roboto, Arial;
+  font-size: 16px;
 }
 
-.middle-section{
-    background-color: bisque;
-    flex: 1;
-    margin-left: 70px;
-    margin-right: 40px;
-    max-width: 300px;
+.left-section {
+  display: flex;
+  align-items: center;
 }
 
-.right-section{
-    background-color: darkgray;
-    width: 200px;
+.middle-section {
+  margin-left: 70px;
+  margin-right: 40px;
+  max-width: 300px;
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
+
+.hamburger-menu {
+  height: 20px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.yt-logo {
+  height: 20px;
+}
+
+.search-button {
+  height: 40px;
+  width: 66px;
+  background-color: rgb(238, 238, 238);
+  border: solid 1px;
+  border-color: rgb(179, 179, 179);
+  margin-left: -1px;
+  margin-right: 10px;
+}
+
+.voice-search-button {
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(240, 240, 240);
+}
+
+.right-section {
+  width: 180px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+
+.upload,
+.yt-apps,
+.notifications,
+.voice-search-icon,
+.search-icon {
+  height: 24px;
+  margin-top: 4px;
+}
+
+.my-channel-photo {
+  height: 32px;
+  border-radius: 32px;
 }
