--- a/header.css
+++ b/header.css
@@ -3,7 +3,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border-bottom-width: 1px;
+  border-bottom-color: rgb(230, 230, 230);
+  border-bottom-style: solid;
+  }
 
 .search-bar {
   flex: 1;
@@ -30,7 +38,7 @@
 .middle-section {
   margin-left: 70px;
   margin-right: 40px;
-  max-width: 300px;
+  max-width: 500px;
   display: flex;
   flex: 1;
   align-items: center;
