--- a/style3.css
+++ b/style3.css
@@ -253,7 +253,7 @@
   margin-top: 20px;
   display: flex;
   flex-direction: row;
-  align-items: center;  
+  align-items: center;
 }
 
 .notifi-info {
@@ -295,7 +295,7 @@
   color: grey;
 }
 
-.post{
+.post {
   background-color: white;
   width: 450px;
   margin-top: 30px;
@@ -304,14 +304,14 @@
   padding: 20px;
 }
 
-.post-info{
+.post-info {
   margin-left: 10px;
 }
-.tweet-header{
+.tweet-header {
   display: flex;
   align-items: center;
 }
-.person-info{
+.person-info {
   display: flex;
   align-items: center;
   font-size: 18px;
@@ -319,17 +319,17 @@
   margin-bottom: 0;
 }
 
-.nickname{
+.nickname {
   color: grey;
   font-weight: normal;
   margin-left: 8px;
-  display: flex;  
+  display: flex;
 }
 
-.text-info{
+.text-info {
   margin-top: 4px;
 }
-.yt-preview{
+.yt-preview {
   border: solid 1px;
   border-color: rgb(202, 202, 202);
   border-radius: 15px;
@@ -339,23 +339,38 @@
   width: 350px;
   margin-top: 20px;
   overflow: hidden;
-  
 }
-.yt-info{  
+.yt-info {
   flex: 1;
 }
-.yt-photo{
+.yt-photo {
   background-color: rgb(202, 202, 202);
   width: 100px;
   height: 100px;
   margin-right: 10px;
 }
 
-.yt-link{
+.yt-link {
   color: gray;
 }
 
-.yt-title{
+.yt-title {
   margin-top: 4px;
   line-height: 22px;
+}
+
+.position {
+  background-color: khaki;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.overlay {
+  background-color: white;
+  font-family: Arial;  
+  width: 400px;
+  border-radius: 10px;
+  padding: 30px;
 }
