--- a/style3.css
+++ b/style3.css
@@ -374,3 +374,84 @@
   border-radius: 10px;
   padding: 30px;
 }
+
+.close-button{
+  background-color: black;
+  color: white;
+  position: absolute;
+  padding: 12px 15px;
+  border-radius: 50px;
+  font-family: Arial;
+  top: 10px;
+  right: 10px
+}
+.close-button2{
+  background-color: black;
+  color: white;
+  position: absolute;
+  padding: 12px 15px;
+  border-radius: 50px;
+  font-family: Arial;
+  top: -15px;
+  left: -15px
+}
+
+.rectangle{
+  width: 320px;
+  height: 180px;
+  background-color: gray;
+  position: fixed;
+  bottom: 10px;
+  right: 15px;
+}
+
+.time{
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 5px 7px;
+  font-family: arial;
+}
+
+.shoe-photo{
+  height: 300px; 
+  width: 300px; 
+}
+
+.shopping{
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  display: inline-block;
+}
+
+.discount{
+  background-color: black;
+  font-family:  Arial;
+  color: white;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 15px;
+}
+.button-container{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.add-to-cart{
+  background-color: white;
+  color: black;
+  border: solid 1px black;
+  padding: 10px 15px;
+}
