--- a/yt.css
+++ b/yt.css
@@ -29,6 +29,7 @@ p {
 
 .thumbnail-row {
   margin-bottom: 12px;
+  position: relative;
 }
 .video-info-grid {
   display: grid;
@@ -52,5 +53,16 @@ p {
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 15px;
   row-gap: 30px;
+  background-color: rgb(247, 247, 247);  
 }
-
+ .video-time{
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px;
+  border-radius: 2px;
+ }
