sidebar and tooltip, I forgot commit yesterday

--- a/yt.css
+++ b/yt.css
@@ -2,14 +2,21 @@ body {
   font-family: Roboto, Arial;
   margin: 0;
   padding-top: 70px;
-  padding-left: 80px;
+  padding-left: 110px;
+  padding-right: 20px;
+  background-color: rgb(247, 247, 247);
 }
 p {
   margin-top: 0;
   margin-bottom: 0;
 }
 .thumbnail {
-  width: 100%;  
+  width: 100%;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
 }
 
 .video-title {
@@ -19,12 +26,17 @@ p {
   margin-bottom: 10px;
   margin-top: 0;
   line-height: 20px;
+  cursor: pointer;
 }
 .video-stats,
 .video-author {
   font-size: 12px;
   color: rgb(95, 95, 95);
   line-height: 20px;
+}
+
+.video-author {
+  cursor: pointer;
 }
 
 .thumbnail-row {
@@ -37,6 +49,9 @@ p {
 }
 .channel-photo {
   vertical-align: top;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
 }
 
 .video-info {
@@ -48,14 +63,65 @@ p {
   width: 40px;
 }
 
-.video-grid{
+.profile-tooltips p {
+  line-height: 20px;
+}
+
+.video-info-grid .profile-tooltips{
+  position: absolute;
+  margin-top: 6px;
+  background-color: white;
+  border-radius: 10px;
+  width: 240px;
+  padding: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.212);
+  padding-right: 5px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+  z-index: 1;
+}
+
+.video-info-grid:hover .profile-tooltips{
+  opacity: 1;
+}
+.avatar {
+  width: 52px;
+  height: 52px;
+  object-fit: cover;
+  border-radius: 75px;
+  vertical-align: middle;
+}
+
+.profile-picture {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.profile-info {
+  display: inline-block;  
+  padding-left: 10px;
+  vertical-align: middle;
+}
+.name {
+  font-size: 16px;
+  font-weight: bold;
+}
+.subscribers {
+  color: rgb(75, 75, 75);
+  font-size: 14px;
+}
+
+.video-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 15px;
   row-gap: 30px;
-  background-color: rgb(247, 247, 247);  
+  padding-left: 15px;
+  padding-top: 10px;
 }
- .video-time{
+.video-time {
   background-color: black;
   color: white;
   position: absolute;
@@ -65,4 +131,4 @@ p {
   font-weight: 500;
   padding: 4px;
   border-radius: 2px;
- }
+}
