--- a/header.css
+++ b/header.css
@@ -46,9 +46,9 @@
 }
 
 .hamburger-menu {
-  height: 20px;
-  margin-left: 24px;
-  margin-right: 24px;
+  height: 26px;
+  margin-left: 32px;
+  margin-right: 32px;
 }
 
 .yt-logo {
@@ -65,6 +65,47 @@
   margin-right: 10px;
 }
 
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.yt-apps-icon-container .tooltip,
+.notifi-container .tooltip, 
+.my-channel-container .tooltip {
+  position: absolute;
+  background-color: rgba(151, 151, 151, 0.904);
+  color: white;
+  padding: 4px 8px;
+  border-radius: 3px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.yt-apps-icon-container:hover .tooltip,
+.notifi-container:hover .tooltip, 
+.my-channel-container:hover .tooltip {
+  opacity: 1;
+}
+
+.voice-search-button,
+.search-button,
+.upload-icon-container,
+.yt-apps-icon-container,
+.my-channel-container,
+.notifi-container
+ {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .voice-search-button {
   height: 40px;
   width: 40px;
@@ -87,25 +128,21 @@
 .notifications,
 .voice-search-icon,
 .search-icon {
-  height: 24px;
-  margin-top: 4px;
+  height: 24px;  
 }
 
 .my-channel-photo {
   height: 32px;
   border-radius: 32px;
 }
-.notifi-container {
-  position: relative;
-}
 
 .notifi-counter {
   position: absolute;
-  top: 2px;
+  top: -2px;
   right: -7px;
   background-color: rgb(199, 0, 0);
   color: white;
- font-size: 11px;
- padding: 2px 6px;
- border-radius: 10px;
+  font-size: 11px;
+  padding: 2px 6px;
+  border-radius: 10px;
 }
