--- a/sidebar.css
+++ b/sidebar.css
@@ -4,5 +4,28 @@
     bottom: 0;
     top: 55px;
     background-color: white;
-    width: 70px;
+    width: 90px;
+    z-index: 200;
+    padding-top: 5px;
+    cursor: pointer;
 }
+
+.sidebar-link{
+    height: 76px;
+    margin-bottom: 1px;
+    font-size: 11px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sidebar-link:hover{
+    background-color: rgb(228, 228, 228);
+}
+
+.sidebar-link img{
+    width: 24px;
+    margin-bottom: 4px;
+}
+
