finished  project, adding some changes

--- a/yt.css
+++ b/yt.css
@@ -121,6 +121,18 @@ button {
   padding-left: 15px;
   padding-top: 10px;
 }
+
+@media (max-width: 800px){
+  .video-grid{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 1250px){
+  .video-grid{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
 .video-time {
   background-color: black;
   color: white;
